add packageinfo implemention,add IAndroidInvokeFile runner