@@ -10,18 +10,14 @@ make it possible to run android dex file in original Java Virtual Machine.
 
 ## Start
 
-- **only test fully with jdk 1.8 on OSX!!!**
-
 1. open the project with IDEA
 
-2. add vm option => -Xverify:none
-
-3. patch jdk_path/...../libjvm.dylib,which make it possible to load class,the name begin with "java"
+2. patch jdk_path/...../libjvm.dylib,which make it possible to load class,the name begin with "java"
 ![](assets/package.png)
 
-4. use the jre you modified(**or use jdk in [appdbg-JDK](https://github.com/asmjmp0/appdbg-JDK)**)
+3. use the jre you modified(**or use jdk in [appdbg-JDK](https://github.com/asmjmp0/appdbg-JDK)**)
 
-5. **exclude temp dir at project root dir.(if it exist)**<br>
+4. **exclude temp dir at project root dir.(if it exist)**<br>
 ![](assets/idea_highlight_error.png)
 
 
